--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -5,6 +5,8 @@
   margin: 48px 25% 0 10%;
   justify-content: space-between;
   align-items: center;
+  max-width: 1200px;
+
 
   &__heading {
     font-size: 32px;
@@ -65,5 +67,11 @@
         margin: 0;
       }
     }
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  .nav {
+    margin: 30px auto 0 auto;
   }
 }
