--- a/scss/_cta.scss
+++ b/scss/_cta.scss
@@ -17,6 +17,7 @@
     font-size: 48px;
     line-height: 100%;
     color: $heading-color;
+    z-index: 2;
   }
 
   &__text {
@@ -24,6 +25,7 @@
     font-weight: 600;
     font-size: 24px;
     color: $text-color;
+    z-index: 2;
   }
 
   &__btn {
@@ -37,6 +39,7 @@
     letter-spacing: 1px;
     margin-top: 55px;
     margin-bottom: 200px;
+    z-index: 2;
   }
 }
 
@@ -59,5 +62,8 @@
     }
   }
 
-  
+  .rectangle-ten {
+    // left: 30%;
+    display: none;
+  }
 }
