--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,6 +8,7 @@
     margin: 90px auto 0 auto;
     display: flex;
     justify-content: space-between;
+    max-width: 1500px;
   }
 
   &__form {
@@ -74,10 +75,11 @@
     display: flex;
     justify-content: space-between;
     width: 65%;
-    margin: 130px auto 80px auto; 
+    margin: 130px auto 20px auto; 
     font-weight: bold;
     font-size: 16px;
     color: $heading-color;
+    max-width: 1500px;
 
     &_items {
       display: flex;
@@ -124,10 +126,18 @@
     &__nav {
       flex-direction: column;
       align-items: center;
+      font-size: 12px;
+      margin: 50px auto 20px auto;
 
       &_items {
         width: 100%;
       }
     }
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  .footer {
+
   }
 }
