--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -73,3 +73,11 @@
     }
   }
 }
+
+@media screen and (min-width: 2200px) {
+  .features {
+    &__content {
+      margin: 250px 25% 0;
+    }
+  }
+}
