--- a/scss/_testimonials.scss
+++ b/scss/_testimonials.scss
@@ -1,5 +1,6 @@
 .testimonials {
   background: linear-gradient(to bottom, #fff 80%, #fafafa 80% 100%);
+  
 
   &__top {
     margin: 166px 0 0 227px;
@@ -21,12 +22,15 @@
     box-shadow: 16px 16px 32px rgba(0, 0, 0, 0.05);
     background-color: #fff;
     margin-bottom: 40px;
+    transition: transform 0.5s;
+    cursor: pointer;
     
     &_rectangle {
       position: absolute;
       top: 38px;
       left: 94px;
     }
+
     &_photo {
       position: absolute;
       top: 95px;
@@ -60,6 +64,10 @@
       letter-spacing: 2px;
       width: max-content;
       margin: 0 auto 58px auto;
+    }
+
+    &:hover {
+      transform: scale(1.1);
     }
   }
 }
