--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -23,6 +23,10 @@
       background-color: #fafafa;
       margin-top: 30px;
 
+      &:focus {
+        outline-color: $blue-color;
+      }
+
       &::placeholder {
         color: #152032;
         font-weight: bold;
@@ -41,6 +45,12 @@
       color: #fff;
       font-weight: bold;
       margin-top: 100px;
+      cursor: pointer;
+      transition: transform 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 
@@ -68,6 +78,12 @@
     &_social {
       margin-right: 48px;
       margin-top: 40px;
+      cursor: pointer;
+      transition: transform 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 
@@ -85,6 +101,15 @@
       display: flex;
       justify-content: space-between;
       width: 50%;
+    }
+
+    &_item {
+      cursor: pointer;
+      transition: transform 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
@@ -133,11 +158,5 @@
         width: 100%;
       }
     }
-  }
-}
-
-@media screen and (min-width: 2000px) {
-  .footer {
-
   }
 }
